--- a/index.css
+++ b/index.css
@@ -221,7 +221,7 @@ body {
 
 .foto {
     margin: 10px;
-    width: 7vw;
+    max-width: 150px;
     height: 95%;
     object-fit: cover;
     border-radius: 10px;
@@ -265,7 +265,8 @@ body {
 }
 
 .presentation-btns {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
     display: flex;
     gap: 10px;
 }
@@ -277,21 +278,20 @@ body {
     font-weight: bold;
     width: 190px;
     color: var(--white-color);
-    padding: 20px;
+    padding: 40px 1px;
     font-size: 20px;
     transition-duration: .5s;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
 .presentation-btn:hover {
-    background: rgba(0,0,0,0);
-    color: #3a7999;
+    background: rgba(0, 0, 0, 0.373);
+    /* color: #3a7999; */
     box-shadow: inset 0 0 0 3px #3a7999;
 }
 
-
 .second-btn {
-    background-color: var(--black-color);
+    background-color: var(--grey--color);
 }
 
 .info {
@@ -752,5 +752,5 @@ iframe:hover{
 }
 
 .footer-contacts {
-    margin-top: 20px;
+    margin-top: 30px;
 }
