--- a/css/services.css
+++ b/css/services.css
@@ -1,3 +1,26 @@
+.page-title{
+    font-family: var(--font-Wadik);
+    font-weight: bold;
+    font-size: 2vw;
+    margin: 0 auto;
+    padding: 40px 40px;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    border-radius: 10px;
+    background-image: url(../img/bgi-3.png);
+    background-size: cover;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.page-title a{
+    color: var(--grey--color);
+}
+
+.page-title a:hover {
+    color: var(--black-color);
+}
 
 .section-wrapper {
     width: 100%;
@@ -69,8 +92,12 @@
     box-shadow: 4px 4px 8px 0px rgba(10, 25, 37, 0.2);
 }
 
-.services-item .about-item-title {
+.services-item {
     margin-top: 0;
+    font-weight: bold;
+    font-size: 32px;
+    margin-top: 20px;
+    margin-bottom: 25px;
 }
 
 .services-item-icon {
