--- a/index.css
+++ b/index.css
@@ -43,14 +43,14 @@
     --box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
-
+/* 
 * {
     outline: 1px solid #f00 !important;
 } 
 
 *, header, main, .wrapper, footer, div, img {
     border: 1px green solid;
-}   
+}    */
 
 a {
     text-decoration: none;
