--- a/media.css
+++ b/media.css
@@ -235,6 +235,16 @@
         font-size: 15px;
     }
 
+    .selection-items {
+        grid-template-rows: repeat(6, 150px);
+        grid-template-columns: 250px;
+        gap: 20px;
+        height: 100%;
+    }
+
+    .btn-section{
+        flex-direction: column-reverse;
+    }
 
 }
 
@@ -244,21 +254,40 @@
         display: none;
     }
 
-    .btn-section{
+    .sliders{
+        display: none;
+    }
+
+    .presentation-btns{
         flex-direction: column-reverse;
     }
 
-    /* .presentation-btns{
-        flex-direction: column-reverse;
-    } */
+    iframe{
+        display: none;
+    }
+    
+    .header__items{
+        flex-direction: column;
+        align-items: center;
+    }
 
-    .sliders{
+    .header__title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__title p:last-child{
         display: none;
     }
 }
 
+@media screen and (max-width: 400px) {
+    .main-title{
+        display: none;
+    }
 
-
-
-
-
+    .presentation-item{
+        flex-direction: column;
+    }
+}
